# shuup-megastore-theme

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.tx/: config
shuup_megastore_theme/: .gitignore  VENDOR-LICENSES.md  __init__.py  apps.py  bower.json  build_resources.js  generated_resources.txt  gulpfile.js  npm-shrinkwrap.json  package-lock.json  package.json  plugins.py  postcss.config.js  theme.py
shuup_megastore_theme/_templates/shuup_megastore_theme/: add_product_to_basket.jinja  highlight_plugin.jinja  navigation_basket_partial.jinja
shuup_megastore_theme/_views/: __init__.py
shuup_megastore_theme/locale/en/LC_MESSAGES/: django.po
shuup_megastore_theme/locale/zh_Hans/LC_MESSAGES/: django.po
shuup_megastore_theme/static_src/js/: custom.js
shuup_megastore_theme/static_src/js/custom/: checkout.js  custom.js
shuup_megastore_theme/static_src/less/: style.less
shuup_megastore_theme/static_src/less/shuup_megastore_theme/: add-to-cart-indicator.less  base.less  basket.less  carousels.less  category.less  checkout.less  contact_information.less  dashboard.less  footer.less  inputs.less  loader.less  modals.less  navigation.less  product-card.less  product-page.less  social-media-links.less  variables.less
shuup_megastore_theme/templates/shuup_megastore_theme/: add_product_to_basket.jinja  highlight_plugin.jinja  macros.jinja  navigation_basket_partial.jinja  product_preview.jinja
shuup_megastore_theme/views/: __init__.py  _basket.py  _product_preview.py
(+99 files in other folders)
