[metadata]
name = shuup-megastore-theme
version = 2.1.1
description = Shuup Megastore Theme
long_description = file: README.rst
keywords = megastore, theme, shuup

[options]
include_package_data = True
packages = find:
install_requires =
    setuptools-gitver>=1.1.0

[options.entry_points]
shuup.addon = shuup_megastore_theme = shuup_megastore_theme

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,migrations,doc/*
max-line-length = 120
max-complexity = 10

[isort]
atomic=true
combine_as_imports=false
indent=4
known_first_party=shuup
known_standard_library=token,tokenize,enum,importlib
known_third_party=django,six
length_sort=false
line_length=79
multi_line_output=5
order_by_type=false
skip=migrations
not_skip=__init__.py
wrap_length=79
